Migrate to better method suggested by an experienced friend

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,9 @@
     "sourceType": "module"
   },
   "rules": {
-    "no-plusplus": "off"
+    "radix": "off",
+    "prefer-const": "off",
+    "no-plusplus": "off",
+    "prefer-template": "off"
   }
 }
